--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ nav{
     padding-top: 14px;
     padding-bottom: 10px;
     background-color: white;
+    width: 100%;
 }
 nav ul li{
     list-style: none;
@@ -77,7 +78,7 @@ nav ul{
     text-align: center;
 }
 .searchbar{
-    width: 29vw;
+    width: 22vw;
     padding: 7px;
     border: 0.1px solid rgb(238, 238, 238);
     border-radius: 5px;
@@ -91,9 +92,10 @@ nav ul{
     margin-left: 20px;
     display: none;
 }
-.right{
-    width: 100%;
+.menuItems{
+    margin-top: 390px;
 }
+
 
 /* -----fetured categories----- */
 
@@ -103,7 +105,6 @@ nav ul{
 .row{
     justify-content: center;
     margin-bottom: 120px;
-    
 }
 
 .col-3{
@@ -157,8 +158,8 @@ h4{
 .col-4 img{
     flex-basis: 25%;
     padding: 10px;
-    min-width: 250px;
-    margin-bottom: 50px;
+    width: 70%;
+    margin-bottom: 20px;
     transition: transform 0.5;
 }
 .col-4 p{
@@ -202,6 +203,87 @@ h4{
 }
 
 
+
+/* ----- All Product Page ----- */
+
+
+#filter{
+    display: block;
+    margin: auto;
+    font-size: 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    background-color: rgb(242, 250, 255);
+    font-size: 15px;
+    width: 200px;
+  }
+  #product-container{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 20px;
+    width: 100%;
+    margin-bottom: 50px;
+  }
+  #product-container>div{
+    width: 100%;
+    margin-bottom: 50px;
+  
+  }
+  #product-container>div>img{
+    width: 60%;
+    padding: 10px;
+    margin-bottom: 20px;
+    transition: transform 0.5;
+  }
+  #product-container>div:hover{
+    transform: translateY(-5px);
+  }
+
+  #product-container>div p{
+    font-size: 14px;
+  }
+  #product-container>div p:nth-last-child(2){
+    font-size: 14px;
+    font-weight: bold;
+  }
+ 
+  #product-container>div>button{
+   
+    display: block;
+    margin: auto;
+    background-color: rgb(255, 197, 7);
+    color: white;
+    padding: 5px;
+    border: none;
+    border-radius: 3px;
+    font-size: 12px;
+  }
+  #product-container>div>button:hover{
+    background-color: rgb(255, 164, 78);
+  }
+  .row5{
+    padding-top: 60px;
+    padding-bottom: 40px;
+    width: 90%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+  }
+  #filter{
+    padding: 0;
+    margin: 0;
+  }
+
+
+
+
+
+
+
+
+
+
+
 /* ----- media query MENU BAR ----- */
 
 @media only screen and (max-width: 900px){
@@ -214,6 +296,8 @@ h4{
         width: 100%;
         display: block;
         text-align: right;
+        overflow: hidden;
+        transition: max-height 0.5s;
     }
     nav ul li{
        margin-right: 5px;
@@ -223,6 +307,14 @@ h4{
     nav ul li a{
         color: white;
      }
+     .right{
+        margin-right: 100px;
+        margin: auto;
+     }
+     .right img{
+        margin-left: 15px;
+        margin-right: 15px;
+     }
      .menu-icon{
         display: block;
         cursor: pointer;
@@ -231,12 +323,62 @@ h4{
         display: none;
      }
      .ftlogo{
-        display: block;
-        width: 100%;
+        width: 25%;
+       margin: auto;
      }
-    
+     section>div{
+        width: 100%;
+        background-color: rgb(255, 250, 214);
+     }
+     .row2{
+        display: grid;
+        grid-template-columns: repeat(2,3fr);
+    }
+    .row3{
+        display: grid;
+        grid-template-columns: repeat(2,5fr);
+    }
+    .footer{
+        width: 100%;
+    }
+    #product-container{
+        display: grid;
+        grid-template-columns: 50% 50%  ;
+        gap: 20px;
+        justify-content: center;
+      }
+}
+
+/* ----- media query 600px screen size ----- */ 
 
 
+@media only screen and (max-width: 600px){
+    .row2{
+        display: grid;
+        grid-template-columns: repeat(1,6fr);
+    }
+    .row3{
+        display: grid;
+        grid-template-columns: repeat(1,6fr);
+        text-align: center;
+    }
+    .row{
+        text-align: center;
+    }
+    .col-3{
+        flex-basis: 100%;
+        display: block;
+        padding: 30px'
+    }
+    .right>div img{
+        margin-left: 0px;
+        margin-right: 0px;
+        width: 20px;
+        height: 35px;
+     }
+     .footer{
+        text-align: center;
+     }
 }
     
 
