--- a/style.css
+++ b/style.css
@@ -10,11 +10,13 @@ body {
     width: 100%;
     font-family: 'Poppins', sans-serif;
 } 
-header{
+#header{
     position: sticky;
     top: 0;
+    z-index: 9;
     background-color: white;
     height: 66px;
+    width: 100%;
 }
 .left{
     display: flex;
@@ -35,12 +37,15 @@ nav{
 nav ul li{
     list-style: none;
     padding: 0 32px;
+   
 }
+
 nav ul{
     display: flex;
 }
 .ftlogo{
     display: none;
+    padding: 20px;
 }
 .profile img{
     width: 25px;
@@ -70,8 +75,8 @@ nav ul{
     padding-bottom: 5px;
 }
 .homeImg{
-    width: 80vw;
-    margin: 22px 0px;
+    width: 100%;
+    margin: 72px 0px;
 }
 .bag{
     display: grid;
@@ -95,6 +100,84 @@ nav ul{
 .menuItems{
     margin-top: 390px;
 }
+.section1 h1{
+    color: rgb(122, 121, 121);
+    text-align: left;
+    margin-left: 30px;
+    font-size: 30px;
+}
+.section1 h1:nth-child(3){
+    margin-top: 60px;
+    color: rgb(122, 121, 121);
+}
+
+
+/* -----Hamburger drop  down menu----- */
+
+
+nav ul li:hover{
+   /* background-color: rgb(255, 253, 250);
+   border-bottom:solid pink;
+   border-radius: 5px; */
+}
+nav ul li:hover::after{
+    content: '';
+    background-color: rgb(255, 255, 0);
+    width: 70px;
+    height: 5px;
+    border-radius: 5px;
+    position: absolute;
+    top: 0;
+    margin: 80px 90px 0px 0px;
+}
+.sub-menu1{
+    display: none;
+    font-size: 11px;
+    color: #555;
+   
+}
+.sub-menu1 h1{
+ color: rgb(255, 224, 50);
+ font-size: 12px;
+}
+.sub-menu1>div{
+    display: flex;
+    grid-template-columns: repeat(4,1fr);
+    width: 100%;
+    height: 100%;
+    margin: 20px;
+}
+
+
+nav ul li:hover .sub-menu1{
+   
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    position: absolute;
+    background-color: rgb(255, 250, 243);
+    margin-top: 31px;
+    margin-left: -15px;
+}
+.sub-menu1 ul li:hover{
+    color: #333;
+}
+nav ul li:hover .sub-menu1 ul{
+    display: block;
+    margin: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* -----fetured categories----- */
@@ -105,6 +188,7 @@ nav ul{
 .row{
     justify-content: center;
     margin-bottom: 120px;
+    margin-top: 100px;
 }
 
 .col-3{
@@ -119,10 +203,11 @@ nav ul{
 }
 
 .smallContainer{
-    max-width: 1600px;
+    width:80%;
     margin: auto;
     padding-left: 25px;
     padding-right: 25px;
+    text-align: center;
 }
 
 /* -----fetured  products----- */
@@ -279,6 +364,179 @@ h4{
 
 
 
+  /* ----- Login/Sign In Page ----- */
+  .login{
+    background-color: rgb(255, 238, 241);
+    width: 100%;
+    height: 965px;
+    position: absolute;
+    bottom: 0;
+    justify-content:center;
+    margin: auto;
+    padding: 0;
+    display: flex;
+    
+  }
+  .login>div{
+    margin-top: 50px;
+    background-color: white;
+    min-width: 300px;
+    width: 30%;
+    height: 900px;
+  }
+  .login img{
+    width: 100%;
+  }
+  .login>div>div{
+    padding: 50px;
+    width: 100%;
+    text-align: center;
+  }
+  .login>div h2{
+    color: #555;
+    text-align: left;
+  }
+  .login>div span{
+    font-weight: 300;
+    font-size: 20px;
+  }
+  .number{
+    width: 100%;
+    height: 45px;
+    font-size: 13px;
+    font-weight: 100;
+    border: 1px solid rgb(223, 223, 223);
+    padding: 15px;
+    margin: 30px 0;
+  }
+  .login >div>div p{
+    font-size: 15px;
+  }
+  .login a{
+    color: rgb(253, 87, 142);
+    font-weight: 800;
+  }
+  .login p{
+    color: rgb(167, 167, 167);
+    text-align: left;
+  }
+  .login-btn{
+    width: 100%;
+    height: 49px;
+    margin: 20px 0;
+    color: white;
+    background-color:  rgb(252, 52, 102);
+    border: none;
+    font-weight: bolder;
+    font-size: 15px;
+  }
+  .login-btn:hover{
+    cursor: pointer;
+    background-color:  rgb(187, 28, 67);
+  }
+
+
+
+/* external css: flickity.css */
+
+  
+  .carousel-cell {
+    width: 100%;
+    border-radius: 5px; 
+    margin-top: 50px;
+    margin-bottom: 50px;
+    background-color: rgb(255, 255, 255);
+    position: unset;
+  }
+  .carousel-cell img{
+    width: 100%; 
+  }
+  
+  .carousel{
+    width: 100%;
+    height: 100%;
+    margin-bottom: 10px;
+    
+  }
+  
+
+        /* cart section */
+
+  #cart-container{
+    display: grid;
+    grid-template-columns: repeat(4,1fr) ;
+    gap: 20px;
+    justify-content: center;
+    margin:100px;
+  }
+  
+  
+  #total{
+    text-align: right;
+    font-size: 20px;
+    margin-right: 20px;
+    color: rgb(58, 58, 58);
+  }
+  #cart-container{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 20px;
+    width: 100%;
+    margin-bottom: 50px;
+  }
+  #cart-container>div{
+    width: 100%;
+    margin-bottom: 50px;
+  
+  }
+  #cart-container>div>img{
+    width: 60%;
+    padding: 10px;
+    margin-bottom: 20px;
+    transition: transform 0.5;
+  }
+  #cart-container>div:hover{
+    transform: translateY(-5px);
+  }
+
+  #cart-container>div p{
+    font-size: 14px;
+  }
+  #cart-container>div p:nth-last-child(2){
+    font-size: 14px;
+    font-weight: bold;
+  }
+ 
+  #cart-container>div>button{
+    margin: 10px;
+    background-color: rgb(255, 197, 7);
+    color: white;
+    padding: 5px;
+    border: none;
+    border-radius: 3px;
+    font-size: 12px;
+  }
+
+
+  #cart-container>div>button:hover{
+    background-color: rgb(255, 164, 78);
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -325,10 +583,13 @@ h4{
      .ftlogo{
         width: 25%;
        margin: auto;
+       display: block;
      }
      section>div{
         width: 100%;
-        background-color: rgb(255, 250, 214);
+     }
+     .ftdiv{
+        background-color: rgb(255, 249, 235);
      }
      .row2{
         display: grid;
@@ -346,6 +607,10 @@ h4{
         grid-template-columns: 50% 50%  ;
         gap: 20px;
         justify-content: center;
+      }
+      .carousel{
+        margin-top: 60px;
+        
       }
 }
 
@@ -379,6 +644,64 @@ h4{
      .footer{
         text-align: center;
      }
+     /* .left img{
+        width: 1px;
+        height: 0px;
+        margin: 0;
+        padding: 0;
+    } */
+    
+    nav {
+      padding: 20px;
+      background-color: rgb(255, 218, 150);
+    }
+    
+    .wishlist{
+        display: none;
+    }
+    .ftlogo{
+        width: 55%;
+        margin-top: 15px;
+     }
+     .carousel{
+        margin-top: 0px;
+      }
+      .ftdiv{
+        height: 90px;
+        margin: auto;
+     }
+     .row{
+        width: 100px;
+        padding: 0;
+        margin: 0;
+     }
+     .col-3 img{
+        flex-basis: 25%;
+        padding: 10px;
+        width: 70%;
+        margin-bottom: 20px;
+    }
+    .row{
+        display: grid;
+        grid-template-columns: repeat(1,3fr);
+       
+        margin-bottom: 100px;
+        width: 100%;
+    }
+    .row3{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        margin-bottom: 100px;
+        width: 100%;
+    }
+    .row3 img:nth-child(1){
+       display: none;
+        margin-right: 130px;
+    }
+    .footer{
+        margin: 0;
+        padding: 0;
+    }
 }
     
 
@@ -432,8 +755,8 @@ h4{
  }
 .container{
    text-align: center;
-   max-width:2000px;
-    margin: auto;
+   width: 100%;
+   margin: auto;
  }
  .items-center{
     align-items: center;
